--- a/index.html
+++ b/index.html
@@ -7,45 +7,56 @@
 
 <h1>Diffraction</h1>
 
+<p><i>"The subtle pattern of light and dark fringes seen in the geometrical shadow when light passes an obstacle...is an example of the wave 
+phenomenon of <span class="gray"><a href="https://www.britannica.com/science/light/Thin-film-interference#ref258401">diffraction.</a></span> 
+Diffraction is a product of the superposition of waves--it is an <span class="black">interference effect</span>. Whenever a wave is obstructed, 
+those portions of the wave not affected by the obstruction <span class="black">interfere</span> with one another in the region of space 
+<span class="black">beyond the obstruction</span>."</i></p>
+
 <img src="diffraction.jpg" alt="image of waves diffracting" class="center">
 
-<h2>Introduction</h2>
-<p><i>"The subtle pattern of light and dark fringes seen in the geometrical shadow when light passes an obstacle...is an example of the wave 
-phenomenon of diffraction. Diffraction is a product of the superposition of waves--it is an interference effect. Whenever a wave is obstructed, 
-those portions of the wave not affected by the obstruction interfere with one another in the region of space beyond the obstruction."</i> 
---Encyclopaedia Britannica, <a href="https://www.britannica.com/science/light/Thin-film-interference#ref258401">Light: Diffraction</a></p>
+<p>&nbsp;</p>
 
-<div style="width:image width px; font-size:70%; text-align:center;">
-<img src="Sagarentii.png" alt="image of planet sagarentii" style="max-height:40%;max-width:40%;" class="center">
-Image of the planet Sagarentii.
-</div> 
+<h2>Visitor Instructions</h2>
+<p>Some text in "Diffraction" is hidden against the background color of the page. 
+To read hidden text, use the cursor to highlight <span class="black">obvious</span> gaps <span class="black">in the text,</span> 
+such as <span class="black">this one. Other than that, please avoid communication with the alien research subjects. 
+Our latest models have not been equipped to handle the complexity of </span>human <span class="black">language yet. 
+Thank you</span>, and <span class="black">we hope </span>you <span class="black">enjoy your trip to </span>the 
+<span class="black">Sagarentii Research</span> Compound.</p>
+
+<p>&nbsp;</p>
+
+<h2>Introduction</h2>
 
 <p>In 2060 CE, Asteria Corporation opened its first research compound on the minor planet Sagarentii, to research the Sagarentii palm--a tree that 
 produces oils convertible for biodiesel. But the Sagarentii palm groves were guarded upon their arrival, by creatures with reptilian faces,
 moving across the land on giant, serpentine tails: this was humanity's first contact with the aliens that came to be known as Croakworms.</p> 
 
-<p>Croakworms are a sentient, but primitive species residing in Sagarentii's khalkedon caverns. They are clothed in little more than rags, 
-and are armed with spears and knives coated with toxins from their skin. They feed on the fruit of the Sagarentii palm, and hold agricultural 
-rituals in which they scatter their own blood meal to keep their Sagarentii palm groves fertile. They have no written language, and communicate 
-through long, frog-like calls from which their name is derived. Additionally, Croakworms have no formal system of government. Their closest semblance 
-to social order is their insistence on color-based division within their communities. Roughly half of a community's Croakworms will be black, while the other half will be white. Because black Croakworms are noctural, and white 
+<p>Croakworms are <span class="black">a sentient, but</span> primitive <span class="black">species residing in Sagarentii's khalkedon caverns. 
+They are clothed in little more than rags, and are armed with spears and knives coated with</span> toxins <span class="black">from their skin. 
+They feed on the fruit of the Sagarentii palm, and hold agricultural rituals in which they scatter their own blood meal to keep their Sagarentii palm groves fertile. They have no written language, and communicate 
+through long, frog-like calls from which their name is derived. Additionally, Croakworms have no formal system of government. Their closest 
+semblance to </span>social order is <span class="black">their insistence on color-based division within their communities. Roughly half of a community's Croakworms will be black, while the other half will be white. Because black Croakworms are noctural, and white 
 Croakworms diurnal, the two colors never mix except at dusk and dawn. No other Croakworm colors have ever been observed, with the exception of 
-<span class="gray">gray,</span> which the Croakworms consider a mutant color. Many Croakworms had sought to eliminate the 
-<span class="gray">mutant color</span> from their communities by <span class="gray">killing</span> gray Croakworms, but the mutation continued to be 
-<span class="gray">spread.</span></p>   
+<span class="gray">gray</span>, which the Croakworms consider a mutant color. Many Croakworms had sought to eliminate the 
+mutant color from their communities by <span class="gray">killing</span> gray Croakworms, but the mutation continued to be 
+<span class="gray">spread.</span></p></span>   
    
-<p>Asteria Corp. offered to help Croakworms research a way to end the gray mutation, in exchange for access to the Sagarentii palms. Communities
+<p><span class="black">Asteria Corp. offered to help Croakworms research a way to end the gray mutation, in exchange for access to the Sagarentii palms. Communities
 that agreed were relocated to the Asteria Research Compound (ARC), where they became genetic research subjects. Other communities, especially those 
-that refused to kill gray Croakworms, have rejected the bargain and continued to block access to their groves. Recently, an organized collective of 
-communities, who call themselves The Recovering, have started a guerilla war against Asteria Corp. in an attempt to disrupt its research and outreach
-efforts to persuade remaining Croakworm communities to come to ARC.</p>
+that have refused to kill gray Croakworms, have rejected the bargain and continued to block access to their groves. Recently, an organized collective of 
+communities, who call themselves The Recovering, have started a guerilla war against Asteria Corp. in an attempt to disrupt its outreach efforts to 
+persuade remaining Croakworm communities to come </span>join <span class="black">the ARC.</span></p>
 
-<p>To combat The Recovering, Asteria Corp. has created a group of genetically enhanced Croakworms called The Modeled Minority. These enhanced 
-Croakworms--known as Models--are being trained to convince all Croakworms to embrace the ARC. But just as much as they are corporate ambassadors,
-the Models are also cultural ambassadors, advocating for the ultimate merits of embracing humankind. Someday, we hope our Models may help spread
-civilization to every planet. But until then, we invite you, visitor, to see our current progress.</p>
+<p><span class="black">To combat The Recovering, Asteria Corp. has created a group of genetically enhanced Croakworms called</span> 
+The Modeled Minority. <span class="black">These enhanced Croakworms--known as Models--are being trained to convince all Croakworms 
+to embrace the ARC. But just as much as they are corporate ambassadors, the Models are also cultural ambassadors, 
+advocating for the ultimate merits of embracing</span> humankind<span class="black">. Someday, we hope our Models may help spread civilization 
+to every planet. But until then, we invite you, visitor, to see our current progress.</span></p>
 
-<div style="text-align:right;"><a href="intro.html">Next ==></a></div>
+
+<div style="text-align:right;"><a href="myth1.html">Next ==></a></div>
 
 </body>
 </html>
