--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <h1>Diffraction</h1>
 
-<p><i>"The subtle pattern of light and dark fringes seen in the geometrical shadow when light passes an obstacle...is an example of the wave 
+<p><em>"The subtle pattern of light and dark fringes seen in the geometrical shadow when light passes an obstacle...is an example of the wave 
 phenomenon of <span class="gray"><a href="https://www.britannica.com/science/light/Thin-film-interference#ref258401">diffraction.</a></span> 
 Diffraction is a product of the superposition of waves--it is an <span class="black">interference effect</span>. Whenever a wave is obstructed, 
 those portions of the wave not affected by the obstruction <span class="black">interfere</span> with one another in the region of space 
-<span class="black">beyond the obstruction</span>."</i></p>
+<span class="black">beyond the obstruction</span>."</em></p>
 
 <img src="diffraction.jpg" alt="image of waves diffracting" class="center">
 
@@ -56,7 +56,7 @@ advocating for the ultimate merits of embracing</span> humankind<span class="bla
 to every planet. But until then, we invite you, visitor, to see our current progress.</span></p>
 
 
-<div style="text-align:right;"><a href="myth1.html">Next ==></a></div>
+<div style="text-align:right;"><a href="toc.html">Next ==></a></div>
 
 </body>
 </html>
