--- a/toc.html
+++ b/toc.html
@@ -6,6 +6,7 @@
 <body class="blackground">
 <h2>Table of Contents</h2>
 
+<p><a href="index.html">Introduction</a></p>
 <p><a href="myth0.html">Myth 0: D.A.T.A.</a></p>
 <p><a href="moment0.html">Moment 0: Enlightenment</a></p>
 <p><a href="myth1.html">Myth 1: Return Language</a></p>
