--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ phenomenon of <span class="gray"><a href="https://www.britannica.com/science/lig
 Diffraction is a product of the superposition of waves--it is an <span class="black">interference effect</span>. Whenever a wave is obstructed, 
 those portions of the wave not affected by the obstruction <span class="black">interfere</span> with one another in the region of space 
 <span class="black">beyond the obstruction</span>."</em></p>
-
+<p>&nbsp;</p>
 <img src="diffraction.jpg" alt="image of waves diffracting" class="center">
 
 <p>&nbsp;</p>
