--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ communities, who call themselves The Recovering, have started a guerilla war aga
 persuade remaining Croakworm communities to come </span>join <span class="black">the ARC.</span></p>
 
 <p><span class="black">To combat The Recovering, Asteria Corp. has created a group of genetically enhanced Croakworms called</span> 
-The Modeled Minority. <span class="black">These enhanced Croakworms--known as Models--are being trained to convince all Croakworms 
+The Model<span class="black">ed</span> Minority. <span class="black">These enhanced Croakworms--known as Models--are being trained to convince all Croakworms 
 to embrace the ARC. But just as much as they are corporate ambassadors, the Models are also cultural ambassadors, 
 advocating for the ultimate merits of embracing</span> humankind<span class="black">. Someday, we hope our Models may help spread civilization 
 to every planet. But until then, we invite you, visitor, to see our current progress.</span></p>
