--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="diffraction.css">
+<link rel="icon" href="favicon-16x16.png" type="image/gif">
 </head>
 <body class="blackground">
-
-<h1>Diffraction</h1>
+<img src="blogo.png" alt="diffraction logo" class="center">
+<img src="diffraction.jpg" alt="image of waves diffracting" class="center">
 
 <p><em>"The subtle pattern of light and dark fringes seen in the geometrical shadow when light passes an obstacle...is an example of the wave 
 phenomenon of <span class="gray"><a href="https://www.britannica.com/science/light/Thin-film-interference#ref258401">diffraction.</a></span> 
@@ -13,7 +14,6 @@ Diffraction is a product of the superposition of waves--it is an <span class="bl
 those portions of the wave not affected by the obstruction <span class="black">interfere</span> with one another in the region of space 
 <span class="black">beyond the obstruction</span>."</em></p>
 <p>&nbsp;</p>
-<img src="diffraction.jpg" alt="image of waves diffracting" class="center">
 
 <p>&nbsp;</p>
 
