--- a/moment1.html
+++ b/moment1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="diffraction.css">
+<link rel="icon" href="favicon-16x16.png" type="image/gif">
 </head>
 <body class="blackground">
 <h2>Moment 1: Modification</h2>
