--- a/moment2.html
+++ b/moment2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="diffraction.css">
+<link rel="icon" href="favicon-16x16.png" type="image/gif">
 </head>
 <body>
 <h2>Moment 2: Reinforcement</h2>
